JDK-7190089 : NMT ON: NMT failed assertion on thread's stack base address
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Affected Version: hs24
  • Priority: P2
  • Status: Closed
  • Resolution: Fixed
  • OS: solaris
  • CPU: x86
  • Submitted: 2012-08-08
  • Updated: 2013-09-12
  • Resolved: 2012-09-19
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Fixed 8Fixed hs24Fixed
Description
8/7/2012 nightly, failed on following tests:
    nsk/coverage/jni/jni001
    nsk/coverage/jni/jni002
    nsk/coverage/jni/jni004
    nsk/coverage/jni/jni005
    nsk/coverage/jni/jni006
    nsk/coverage/jni/jni009
    nsk/coverage/jni/jni010
    nsk/coverage/jni/jni011 

# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/032058.kmcguiga/s/src/share/vm/services/memTracker.hpp:257), pid=336, tid=1
#  assert(base > 0) failed: wrong base address
#
# JRE version:  (7.0_06-b22)
# Java VM: Java HotSpot(TM) Server VM (24.0-b20-internal-201208070320.kmcguiga.hotspot-fastdebug mixed mode solaris-x86 )
# Core dump written. Default location: /export/local/85617.JAVASE.NIGHTLY.VM.RT_Baseline.2012-08-07.solaris-i586_vm__server_mixed_nsk.coverage.testlist.runTests/results/ResultDir/jni001/core or core.336
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

Comments
EVALUATION http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/716e6ef4482a
18-09-2012

EVALUATION Here is the theory what happened - the stack base address can be NULL: src/os/solaris/vm/os_solaris.cpp: size_t adjust_stack_size()sets stack size = base when size > base, which can happen when stack limit is set to 'unlimited' To reproduce the problem: 1. run following command from shell: $ ulimit -H -s unlimited; ulimit -s unlimited 2. run nsk.coverage.jni test
15-08-2012