7190089: NMT ON: NMT failed assertion on thread's stack base address

Solaris only, record stack info to NMT after stack size adjustment was made for primordial threads

Reviewed-by: kvn, acorn, coleenp